--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
             </div>
         </nav>
         <!-- Jumbotron -->
+        <div class="jumbotron">
+        <h1 class="display-4">Valentia Island</h1>
+        </div>
     </header>
     <!-- History Section -->
     <section>
