Added rows and heading the Attractions, Contact and footer sections

--- a/index.html
+++ b/index.html
@@ -86,14 +86,29 @@
 	</section>
 	<!-- Attractions Section -->
 	<section>
-
+		<div class="container attractions">
+			<div class="row">
+                <h2>Attractions:</h2>
+                <!-- Carousel-->
+			</div>
+		</div>
 	</section>
 	<!-- Contact -->
 	<section>
-
+		<div class="container contact">
+			<div class="row">
+                <h2>Contact Us:</h2>
+                <!-- Contact Form-->
+			</div>
+		</div>
 	</section>
 	<!-- Footer -->
 	<footer>
+		<div class="container footer">
+			<div class="row">
+                <!-- footer content-->
+			</div>
+		</div>
 	</footer>
 </body>
 
