Added font links to head

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<title>Valentia Islands</title>
 
 	<!-- External Libraries-->
+    <link href="https://fonts.googleapis.com/css?family=Gelasio:400,500,600,700&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="assets/libraries/css/bootstrap.min.css" type="text/css">
 	<script src="assets/libraries/js/jquery-3.4.1.min.js"></script>
 	<script src="assets/libraries/js/popper.min.js"></script>
