added text for history section: tetrapod, Vikings, and cable

--- a/index.html
+++ b/index.html
@@ -55,33 +55,15 @@
                 <h2>History:</h2>
 				<div class="col-12">
                     <img src="./assets/images/tetra.jpg" class="sm-col-6"></img>
-					<p class="sm-col-12 md-col-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-						the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-						of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-						but also the leap into electronic typesetting, remaining essentially unchanged. It was
-						popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-						and more recently with desktop publishing software like Aldus PageMaker including versions of
-						Lorem Ipsum.</p>
+					<p class="sm-col-12 md-col-6">In 1993 an undergraduate geology student discovered a tetrapod track on the north east of Valentia Island. The tetrapod tracks are in lay person's terms footprints of a animal believed to have been created some 385 million years ago (give or take a year or two). The Valentia Island track way is of international importance as it provides some of the oldest evidence of one of the first water dwelling creatures which crawled out of the water and made the important evolutionary step toward land dwelling.</p>
 				</div>
  				<div class="col-12">
                     <img src="./assets/images/vikings1.jpg" class="col-6 img2"></img>
-					<p class="sm-col-12 md-col-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-						the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-						of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-						but also the leap into electronic typesetting, remaining essentially unchanged. It was
-						popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-						and more recently with desktop publishing software like Aldus PageMaker including versions of
-						Lorem Ipsum.</p>
+					<p class="sm-col-12 md-col-6">The first recorded Viking raid in Ireland was in 795 AD, The Vikings visited Beginish Island, and Valentia Harbour in Kerry aroun that time. When the Vikings arrived they were greeted with warm welcomes to the island, the islanders at the time were very friendly folk, and never encountered any war or crime as such. The Vikings were so taken aback by how they were welcomed to the island, that they hadn't the heart the raid the town like they had planned.</p>
 				</div>
 				<div class="col-12">
                     <img src="./assets/images/cable.jpg" class="col-6"></img>
-					<p class="sm-col-12 md-col-6">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been
-						the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-						of type and scrambled it to make a type specimen book. It has survived not only five centuries,
-						but also the leap into electronic typesetting, remaining essentially unchanged. It was
-						popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages,
-						and more recently with desktop publishing software like Aldus PageMaker including versions of
-						Lorem Ipsum.</p>
+					<p class="sm-col-12 md-col-6">The manufacture of the cable started in early 1857 and was completed in June. Before the end of July it was stowed on the American Niagara and the British Agamemnon — both naval vessels lent by their respective governments for the task. They started at Valentia Harbour in Ireland on 5 August. For the first few days, everything went well but six days later, due to a mistake made with the brake which limited the rate of descent, the cable snapped. Just 380 miles had been laid. The ships were forced to return to port. An extra 700 miles of cable was made for the second attempt which began on 25 June 1858. This time the same two ships met each other in mid-Atlantic where they joined their respective ends. The cable broke almost immediately.</p>
 				</div>
 			</div>
 		</div>
