Added Contact form section

--- a/index.html
+++ b/index.html
@@ -115,12 +115,26 @@
 			</div>
 		</div>
 	</section>
-	<!-- Contact -->
-	<section>
-		<div class="container contact">
-			<div class="row">
-                <h2>Contact Us:</h2>
                 <!-- Contact Form-->
+	<section class="form-section">
+		<form action="#" class="signup-form" method="post">
+			<h2>VISIT US!</h2>
+			<label for="fname">First Name</label>
+			<input type="text" class="text-input" name="first-name" id="fname" required>
+			<label for="lname">Last Name</label>
+			<input type="text" class="text-input" name="last-name" id="lname" required>
+			<label for="email">Email</label>
+			<input type="email" class="text-input" name="email" id="email" required>
+			<div class="form-group">
+				<label for="exampleFormControlTextarea3">Send us Your Visiting Times and Activity Plans</label>
+				<textarea class="form-control text-input" id="exampleFormControlTextarea3" rows="7" required></textarea>
+			</div>
+			<input class="join-button" type="submit" value="Submit">
+        </form>
+	</section>
+	<!-- Footer -->
+	
+	<!-- Footer -->
 			</div>
 		</div>
 	</section>
