Added alt for carousel images

--- a/index.html
+++ b/index.html
@@ -82,21 +82,21 @@
 		</ol>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="https://img.marinas.com/v2/14194f03f617dfa7b58c7a8be7a7032e8436066bf9a8f2b497de33187467d7b0.jpg" class="d-block w-100" alt="...">
+				<img src="https://img.marinas.com/v2/14194f03f617dfa7b58c7a8be7a7032e8436066bf9a8f2b497de33187467d7b0.jpg" class="d-block w-100" alt="Valentia island lighthouse">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Valentia Island Lighthouse</h5>
 					<p>The glistening jewel standing at 15m, located at Cromwell Point in the north of the island.</p>
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="https://4.bp.blogspot.com/-Q7U7_YIYdso/WzQAee3Ki_I/AAAAAAAEOC0/ZOAmtc87dvwQ48Kha8XwMJroJqVCZ8vqwCLcBGAs/s1600/4%252C%2BKnightstown%252C%2Bthe%2Bmain%2Btown%2Bon%2BValentia%2BIsland%252C%2Btakes%2Bits%2Bname%2Bfrom%2Bthe%2BKnights%2Bof%2BKerry.jpg" class="d-block w-100" alt="...">
+				<img src="https://4.bp.blogspot.com/-Q7U7_YIYdso/WzQAee3Ki_I/AAAAAAAEOC0/ZOAmtc87dvwQ48Kha8XwMJroJqVCZ8vqwCLcBGAs/s1600/4%252C%2BKnightstown%252C%2Bthe%2Bmain%2Btown%2Bon%2BValentia%2BIsland%252C%2Btakes%2Bits%2Bname%2Bfrom%2Bthe%2BKnights%2Bof%2BKerry.jpg" class="d-block w-100" alt="Knightstown pier">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Knightstown</h5>
 					<p>A quaint vibrant secluded settlement, steeped in history.</p>
 				</div>
 			</div>
 			<div class="carousel-item">
-				<img src="https://i.pinimg.com/originals/b6/a3/44/b6a3440e7b510497cbe752c0c7867be7.jpg" class="d-block w-100" alt="...">
+				<img src="https://i.pinimg.com/originals/b6/a3/44/b6a3440e7b510497cbe752c0c7867be7.jpg" class="d-block w-100" alt="Tower at bray head">
 				<div class="carousel-caption d-none d-md-block">
 					<h5>Tower at Bray Head</h5>
 					<p>Built in 1815, this languishing two storey abandoned signal tower is waiting to be explored.</p>
