--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
 	<!-- Header/ Navbar -->
-	<header class="bgImg">
+	<header class="bgImg" id="home">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,16 +29,16 @@
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul class="navbar-nav">
 					<li class="nav-item">
-						<a class="nav-link" href="#">Home</a>
+						<a class="nav-link" href="#home">Home</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">History</a>
+						<a class="nav-link" href="#history">History</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Attractions</a>
+						<a class="nav-link" href="#attractions">Attractions</a>
 					</li>
 					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
+						<a class="nav-link" href="#contact">Contact</a>
 					</li>
 				</ul>
 			</div>
@@ -49,7 +49,7 @@
 		</div>
 	</header>
 	<!-- History Section -->
-	<section>
+	<section id="history">
 		<div class="container history">
 			<div class="row">
                 <h2>History:</h2>
@@ -69,7 +69,7 @@
 		</div>
 	</section>
 	<!-- Attractions Section -->
-	<section>
+	<section id="attractions">
 		<div class="container attractions">
 			<div class="row">
                 <h2>Attractions:</h2>
@@ -116,7 +116,7 @@
 		</div>
 	</section>
                 <!-- Contact Form-->
-	<section class="form-section">
+	<section class="form-section" id="contact">
 		<form action="#" class="signup-form" method="post">
 			<h2>VISIT US!</h2>
 			<label for="fname">First Name</label>
